WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
76072
IndexedDB: Raise NON_TRANSIENT_ERR when invalid mode specified for transaction
https://bugs.webkit.org/show_bug.cgi?id=76072
Summary
IndexedDB: Raise NON_TRANSIENT_ERR when invalid mode specified for transaction
Joshua Bell
Reported
2012-01-11 10:08:07 PST
IndexedDB: Raise NON_TRANSIENT_ERR when invalid mode specified for transaction
Attachments
Patch
(5.25 KB, patch)
2012-01-11 10:08 PST
,
Joshua Bell
no flags
Details
Formatted Diff
Diff
Patch
(5.38 KB, patch)
2012-01-11 16:08 PST
,
Joshua Bell
no flags
Details
Formatted Diff
Diff
Patch
(5.57 KB, patch)
2012-01-12 10:00 PST
,
Joshua Bell
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Joshua Bell
Comment 1
2012-01-11 10:08:28 PST
Created
attachment 122045
[details]
Patch
Tony Chang
Comment 2
2012-01-11 15:10:50 PST
Comment on
attachment 122045
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=122045&action=review
> Source/WebCore/ChangeLog:3 > + IndexedDB: Raise NON_TRANSIENT_ERR when invalid mode specified for transaction
Maybe mention that this has now been speced.
> Source/WebCore/ChangeLog:8 > + No new tests. (OOPS!)
Mention which tests are updated here.
Joshua Bell
Comment 3
2012-01-11 16:08:51 PST
Created
attachment 122116
[details]
Patch
Joshua Bell
Comment 4
2012-01-11 16:09:15 PST
Comment on
attachment 122116
[details]
Patch There we go - getting these patches confused. CL updated. tony@ ?
Joshua Bell
Comment 5
2012-01-12 09:43:35 PST
Comment on
attachment 122116
[details]
Patch Need to rebase
Joshua Bell
Comment 6
2012-01-12 10:00:18 PST
Created
attachment 122265
[details]
Patch
Joshua Bell
Comment 7
2012-01-12 10:00:44 PST
Comment on
attachment 122265
[details]
Patch Rebased. tony@ - r? cq?
WebKit Review Bot
Comment 8
2012-01-12 11:39:51 PST
Comment on
attachment 122265
[details]
Patch Clearing flags on attachment: 122265 Committed
r104840
: <
http://trac.webkit.org/changeset/104840
>
WebKit Review Bot
Comment 9
2012-01-12 11:39:55 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug