IndexedDB: Raise NON_TRANSIENT_ERR when invalid mode specified for transaction https://bugs.webkit.org/show_bug.cgi?id=76072

Source/WebCore:

Spec was updated to detail what should be thrown: http://www.w3.org/Bugs/Public/show_bug.cgi?id=11406

Patch by Joshua Bell <jsbell@chromium.org> on 2012-01-12
Reviewed by Tony Chang.

Tests: storage/indexeddb/transaction-basics.html

* storage/IDBDatabase.cpp:
(WebCore::IDBDatabase::transaction):

LayoutTests:

Patch by Joshua Bell <jsbell@chromium.org> on 2012-01-12
Reviewed by Tony Chang.

* storage/indexeddb/transaction-basics-expected.txt:
* storage/indexeddb/transaction-basics.html:

Canonical link: https://commits.webkit.org/93002@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104840 268f45cc-cd09-0410-ab3c-d52691b4dbfc